firmware/build/log/idf_py_stderr_output_55889
Command: make -j 16 all
Loading defaults file /Users/evanji/focus-pager/firmware/sdkconfig.defaults...
Configuration Report                                                            
 ────────────────────────────────────────────────────────────────────────────── 
   Parser Version: 1                                                            
   Verbosity: default                                                           
   Defaults policy: sdkconfig                                                   
   Status: Finished with notifications                                          
                                                                                
  Miscellaneous                                                                 
   ──────────────────────────────────────────────────────────────────────────   
    * BT_NIMBLE_MESH_PROVISIONER (defined at                                    
    /Users/evanji/esp/esp-idf/components/bt/host/nimble/Kconfig.in:1429):       
    'default 0' is not a valid bool value (only 'y' and 'n' are allowed).       
    Value is treated as 'n'.                                                    
    * BTDM_CTRL_LEGACY_AUTH_VENDOR_EVT_EFF (defined at                          
    /Users/evanji/esp/esp-idf/components/bt/controller/esp32/Kconfig.in:177…    
    'default 0' is not a valid bool value (only 'y' and 'n' are allowed).       
    Value is treated as 'n'.                                                    
    * FATFS_PRINT_LLI (defined at                                               
    /Users/evanji/esp/esp-idf/components/fatfs/Kconfig:240): 'default 0' is     
    not a valid bool value (only 'y' and 'n' are allowed). Value is treated     
    as 'n'.                                                                     
    * FATFS_PRINT_FLOAT (defined at                                             
    /Users/evanji/esp/esp-idf/components/fatfs/Kconfig:245): 'default 0' is     
    not a valid bool value (only 'y' and 'n' are allowed). Value is treated     
    as 'n'.                                                                     
   ──────────────────────────────────────────────────────────────────────────   
  Disabled Symbols/Choices With User-Set Value                                  
   ──────────────────────────────────────────────────────────────────────────   
    * ESP_CONSOLE_UART_BAUDRATE (defined at                                     
    /Users/evanji/esp/esp-idf/components/esp_stdio/Kconfig:150) with            
    user-set value 115200 from /Users/evanji/focus-pager/firmware/sdkconfig     
    * NVS_ENCRYPTION (defined at                                                
    /Users/evanji/esp/esp-idf/components/nvs_flash/Kconfig:3) with user-set     
    value n from                                                                
    /var/folders/9b/3jvfyv393d5__wq3hqnf_tvw0000gn/T/kconfgen_tmpz5b5g2ii       
   ──────────────────────────────────────────────────────────────────────────   
 ────────────────────────────────────────────────────────────────────────────── 
CMake Warning at /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/evanji/esp/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/evanji/esp/esp-idf/CMakeLists.txt:356 (__component_validation_run_checks)


CMake Warning at /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/evanji/esp/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/evanji/esp/esp-idf/CMakeLists.txt:356 (__component_validation_run_checks)


CMake Warning at /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/evanji/esp/esp-idf/components/esp_wifi/wifi_apps/include/apps_private'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/evanji/esp/esp-idf/CMakeLists.txt:356 (__component_validation_run_checks)


CMake Warning at /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/evanji/esp/esp-idf/components/wpa_supplicant/src' belongs to
  component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/evanji/esp/esp-idf/CMakeLists.txt:356 (__component_validation_run_checks)


CMake Warning at /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/evanji/esp/esp-idf/components/wpa_supplicant/esp_supplicant/src'
  belongs to component wpa_supplicant but is being used by component
  esp_wifi.  It is recommended to define the component dependency for
  esp_wifi on the component wpa_supplicant, i.e.  'idf_component_register(...
  PRIV_REQUIRES wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component wpa_supplicant.
Call Stack (most recent call first):
  /Users/evanji/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/evanji/esp/esp-idf/CMakeLists.txt:356 (__component_validation_run_checks)


/Users/evanji/focus-pager/firmware/main/ui.c: In function 'ui_init':
/Users/evanji/focus-pager/firmware/main/ui.c:214:10: error: 'esp_lcd_panel_dev_config_t' has no member named 'rgb_endian'
  214 |         .rgb_endian     = LCD_RGB_ENDIAN_RGB,
      |          ^~~~~~~~~~
/Users/evanji/focus-pager/firmware/main/ui.c:214:27: error: 'LCD_RGB_ENDIAN_RGB' undeclared (first use in this function); did you mean 'LCD_RGB_DATA_ENDIAN_BIG'?
  214 |         .rgb_endian     = LCD_RGB_ENDIAN_RGB,
      |                           ^~~~~~~~~~~~~~~~~~
      |                           LCD_RGB_DATA_ENDIAN_BIG
/Users/evanji/focus-pager/firmware/main/ui.c:214:27: note: each undeclared identifier is reported only once for each function it appears in
/Users/evanji/focus-pager/firmware/main/ui.c: At top level:
/Users/evanji/focus-pager/firmware/main/ui.c:148:17: warning: 's_line_buf' defined but not used [-Wunused-variable]
  148 | static uint16_t s_line_buf[LCD_W * CHAR_H];
      |                 ^~~~~~~~~~
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/ui.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
